--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,105 @@
-/* developer styles go here */
+body {
+    font-family: sans-serif;
+}
+
+header {
+    max-width: 58rem;
+    margin: 0 auto;
+}
+
+/* step 1. style all the nav links for the smallest screen. 
+Text styling goes on the anchor elements to overwrite the browser styles. 
+layout and spacing goes on the li elements */
+ul.menu {
+    background-color: #191919;
+}
+
+ul.menu a {
+    color: #f5f5f5;
+    text-decoration: underline;
+    text-transform: uppercase;
+    /* expand the clickable area too fit the entire li vs just the text */
+    display: block;
+    padding-left: 1rem;
+}
+
+ul.menu a:hover,
+ul.menu a:active {
+    background-color: #3e3e3e;
+    border-radius: 5px;
+}
+
+ul.menu li {
+    line-height: 2.8125rem;
+    margin: 0.5rem 0;
+}
+
+svg {
+    display: none;
+}
+
+ul.submenu {
+    padding: 0 1rem;
+}
+
+ul.submenu a {
+    text-decoration: none;
+}
+
+@media screen and (min-width: 40rem) {
+    ul.menu {
+        display: flex;
+    }
+
+    ul.menu li {
+        flex: 1;
+        text-align: center;
+    }
+
+    ul.menu a {
+        padding-left: 0;
+    }
+
+    ul.submenu li {
+        text-align: left;
+    }
+
+    svg {
+        width: 1rem;
+        fill: #f5f5f5;
+        margin: 0.25rem 0 0 0.75rem;
+        display: inline;
+    }
+ 
+   /* step 2. position, style, and hide the dropdown menu */
+    ul.submenu {
+        position: absolute;
+        /* z-index will place this item on top */
+        z-index: 1;
+        background-color: #191919;
+        border-radius: 0 0 5px 5px;
+        visibility: hidden;
+        opacity: 0;
+        transition: all 0.5s ease;
+    }
+
+    /* step 3. add a hover state to the main menu li and show the submenu of that li  */
+    ul.menu li:hover > ul.submenu {
+        visibility: visible;
+        opacity: 1;
+    }
+
+    /* step 4. add transition state to make this smoother. Makes this dropdown a 
+    little more usable. Transition all changing properties (visibilty and opacity), 
+    with a duration 0.5seconds and a timing function of ease  */
+
+    /* add this to the original element before the properties change */
+
+
+    /* step 5. add accessibility with thhe :focus-within state */
+    ul.menu li:focus-within > ul,
+    ul.menu li > ul:focus {
+        visibility: visible;
+        opacity: 1;
+    }
+}
